force-app/main/default/objects/Car__c/fields/Chassis__c.field-meta.xml
<CustomField>
    <fullName>Chassis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chassis</label>
    <referenceTo>Chassis__c</referenceTo>
    <relationshipLabel>Cars</relationshipLabel>
    <relationshipName>Cars</relationshipName>
    <type>Lookup</type>
</CustomField>